# ReFoCUS

./: .gitignore  README.md  index.html  pyproject.toml
eval/refocus_eval/frameidx/: _database_to_frameidx.py  _database_to_frameidx_for_frame_blur.py  _database_to_frameidx_uniform.py
eval/refocus_eval/model_utils/: gaussian_blur.py  llava_ov_hf_base.py  qwen3vl_resolution_helper.py  videollama3_resolution_helper.py  videoloader.py
eval/refocus_eval/models/: HF_FS_internvl2_5.py  HF_FS_internvl2_5_blur.py  HF_FS_llavaOV.py  HF_FS_llavaOV_blur.py  HF_FS_qwen2_5vl.py  HF_FS_qwen3vl.py  HF_FS_qwen3vl_blur.py  HF_FS_refocus.py  HF_FS_refocus_noise.py  HF_FS_videollama3.py  HF_FS_videollama3_blur.py  __init__.py
eval/refocus_eval/tasks/: __init__.py
refocus/: __init__.py  constants.py  conversation.py  mm_utils.py
refocus/model/: __init__.py  llava_arch.py
refocus/model/language_model/: modeling_refocus.py
refocus/model/multimodal_encoder/: builder.py  siglip_encoder.py
refocus/model/multimodal_projector/: builder.py
refocus/utils/: __init__.py  autograd_helpers.py
scripts/: _common.sh  evaluate.sh  prepare.sh  prepare_for_blur.sh  prepare_for_noise.sh  prepare_for_uniform.sh
static/css/: refocus.css
static/js/: refocus.js
